fix list of items, add item to list, add favicon

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link type="image/png" rel="icon" href="./assets/favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <title>Document</title>
+  <title>Projects</title>
 </head>
 <body>
   <ul class = "list">
@@ -16,6 +17,10 @@
     </li>
     <li class = "list_element">
       <a class = "list_element-link" href="./projects/wildlife/index.html">wildlife</a>
+    </li>
+    <li class = "list_element">
+      <a class = "list_element-link" href="https://kazimirzet.github.io/my-google/">my-google</a>
+    </li>
     <li class = "list_element">
       <a class = "list_element-link" href="./projects/virtual-piano/index.html">virtual-piano</a>
     </li>
@@ -24,7 +29,6 @@
     </li>
     <li class = "list_element">
       <a class = "list_element-link" href="./projects/match-match-game/index.html">match-match-game</a>
-    </li>
     </li>
   </ul>
 </body>
